tests/ui/not-visible.stderr
error[E0624]: associated function `f` is private
  --> $DIR/not-visible.rs:17:5
   |
17 |     types::Struct::f();
   |     ^^^^^^^^^^^^^^^^
